Card creation completed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=3.0" />
     <title>Document</title>
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <!--google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -52,8 +60,13 @@
             long-term knowledge.
           </p>
           <div class="banner-button">
-            <button>Start Building Your Vault</button>
-            <button id="button-right">See How It Works</button>
+            <button>
+              Start Building Your Vault
+              <i class="fa-solid fa-arrow-right"></i>
+            </button>
+            <button id="button-right">
+              <i class="fa-solid fa-play"></i>See How It Works
+            </button>
           </div>
         </div>
       </section>
@@ -61,7 +74,64 @@
     <!--header ends-->
 
     <!--Mains starts-->
-    <main></main>
+    <main>
+      <section>
+        <div class="main-heading">
+          <h4>Notes don't fail, Structure does.</h4>
+
+          <p>
+            You're not bad at learning. Your tools just weren't built for how
+            knowledge actually works.
+          </p>
+        </div>
+
+        <!--one card creation -->
+        <div class="mother-div">
+          <div class="child-div">
+            <div class="icon">
+              <div><img src="assets/Vector.png" alt="" /></div>
+            </div>
+            <h6>Scattered notes</h6>
+            <p>Your ideas live in 10 different apps, none of them connected.</p>
+          </div>
+
+          <!--one card creation end -->
+
+          <!--one card creation -->
+
+          <div class="child-div">
+            <div class="icon">
+              <div><img src="assets/Bookmarks.png" alt="" /></div>
+            </div>
+            <h6>Bookmark overload</h6>
+            <p>Hundreds of saved links you'll never revisit or remember.</p>
+          </div>
+
+          <!--one card creation end --><!--one card creation -->
+
+          <div class="child-div">
+            <div class="icon">
+              <div><img src="assets/Brain.png" alt="" /></div>
+            </div>
+            <h6>No idea connections</h6>
+            <p>
+              Insights stay isolated, never building into bigger understanding.
+            </p>
+          </div>
+
+          <!--one card creation end --><!--one card creation -->
+
+          <div class="child-div">
+            <div class="icon">
+              <div><img src="assets/Info.png" alt="" /></div>
+            </div>
+            <h6>Forgetting what you learned</h6>
+            <p>Knowledge fades because there's no system to retain it.</p>
+          </div>
+        </div>
+        <!--one card creation end -->
+      </section>
+    </main>
     <!--Mains ends-->
 
     <footer></footer>
