--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ul>
 
         <div class="nav-button">
-          <button>Get Early Access</button>
+          <button class="btn">Get Early Access</button>
         </div>
       </nav>
 
@@ -60,7 +60,7 @@
             long-term knowledge.
           </p>
           <div class="banner-button">
-            <button>
+            <button class="btn">
               Start Building Your Vault
               <i class="fa-solid fa-arrow-right"></i>
             </button>
@@ -169,6 +169,23 @@
               </li>
             </ul>
           </div>
+        </div>
+      </section>
+
+      <section class="advance-section">
+        <div class="advance">
+          <h4>Ready To Think More Clearly?</h4>
+          <p>
+            Join thousands of learners who are building their personal knowledge
+            vaults. <br />
+            Start free, no credit card required.
+          </p>
+          <div class="last-button">
+            <button class="btn">
+              Get Early Access<i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <p>Free during early access • No credit card needed</p>
         </div>
       </section>
     </main>
