--- a/index.html
+++ b/index.html
@@ -191,6 +191,23 @@
     </main>
     <!--Mains ends-->
 
-    <footer></footer>
+    <footer>
+      <section>
+        <div class="mother">
+          <img src="assets/logo-footer.png" alt="" />
+          <div>
+            <p>Social links</p>
+            <div class="m-of-icons">
+              <div class="icon"><i class="fa-brands fa-x-twitter"></i></div>
+              <div class="icon"><i class="fa-brands fa-linkedin-in"></i></div>
+              <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="copyright">
+          © 2026 Personal Knowledge Vault. All rights reserved.
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
