--- a/index.html
+++ b/index.html
@@ -196,16 +196,24 @@
         <div class="mother">
           <img src="assets/logo-footer.png" alt="" />
           <div>
+            <!-- Social media link add -->
+
             <p>Social links</p>
             <div class="m-of-icons">
-              <div class="icon"><i class="fa-brands fa-x-twitter"></i></div>
-              <div class="icon"><i class="fa-brands fa-linkedin-in"></i></div>
-              <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+              <div class="icon">
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+              </div>
+              <div class="icon">
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              </div>
+              <div class="icon">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              </div>
             </div>
           </div>
         </div>
         <div class="copyright">
-          © 2026 Personal Knowledge Vault. All rights reserved.
+          <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
         </div>
       </section>
     </footer>
