--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=3.0" />
-    <title>Document</title>
+    <title>Assignment-1</title>
     <!-- font awesome -->
     <link
       rel="stylesheet"
@@ -12,13 +12,21 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- css file added -->
     <link rel="stylesheet" href="style.css" />
     <!--google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,34..32,300..900;3,34..32,300..900&family=Open+Sans:ital,wght@0,300..800;3,300..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,34..32,300..900;3,34..32,300..900&family=Open
+      +Sans:ital,wght@0,300..800;3,300..800&display=swap"
       rel="stylesheet"
+    />
+    <!-- Favicon added -->
+    <link
+      rel="shortcut icon"
+      href="assets/CheckCircle.png"
+      type="image/x-icon"
     />
   </head>
   <body class="inter">
